[metadata]
name = newpotato
version = 0.1.0
description = Open Information Extraction (OIE) package for Potato MVP.
author = Your Name
author_email = adaam.ko@gmail.com
license = MIT
url = https://github.com/adaamko/newpotato

[options]
packages = find:
install_requires =
    fastapi
    uvicorn
    streamlit
    graphbrain @ git+https://github.com/graphbrain/graphbrain.git

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    newpotato-cli = newpotato.cli:main
