[metadata]
name = newpotato
version = 0.1.0
description = Open Information Extraction (OIE) package for Potato MVP.
author = Your Name
author_email = adaam.ko@gmail.com
license = MIT
url = https://github.com/adaamko/newpotato

[options]
packages = find:
install_requires =
    fastapi == 0.103.2
    uvicorn == 0.23.2
    streamlit == 1.27.2
    graphbrain @ git+https://github.com/adaamko/graphbrain.git

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    newpotato-cli = newpotato.cli:main
